# veritas-rl

./: README.md  pyproject.toml
data_processing/: add_reasoning.py  convert_swe_synth_sft.py  convert_to_parquet.py  evaluate_dataset.py  generate_dataset.py
docs/: training.md
train/: docker_run_verl.sh
train/scripts/: lgc-v2-RL-GRPO-trainer.sh  lgc-v2-SFT-trainer.sh  merge-ppo.sh  merge-swe-synth-adapter.sh  merge-two-models.sh  merge.sh  openspiel-ppo-trainer.sh  swe-synth-ppo-trainer.sh
train/tools/: align_merged_config_to_base.py  dataset-manager.py  env_adapter.py  merge_adapter_into_base.py  merge_two_models.py  openspiel_adapter.py  show_model_config.py  swe_synth_adapter.py
